--- a/hw4/index.html
+++ b/hw4/index.html
@@ -92,15 +92,15 @@
 				<tr>
 					<td style="text-align: center;">
 						<img src="Part3KS500.png" width="400px" />
-						<figcaption>KS of 500. With a KS of 500, we see that the cloth is very slack on top of the ball, the cloth drapes clearly over the ball and almost completely wraps the ball.</figcaption>
+						<figcaption>With a KS of 500, we see that the cloth is very slack on top of the ball, the cloth drapes clearly over the ball and almost completely wraps the ball.</figcaption>
 					</td>
 					<td style="text-align: center;">
 						<img src="Part3KS5000.png" width="400px" />
-						<figcaption>KS of 5000. With a KS of 5000, the cloth is slightly more stiff than a KS of 500, but there are still many folds on the cloth and the cloth still covers the ball.</figcaption>
+						<figcaption>With a KS of 5000, the cloth is slightly more stiff than a KS of 500, but there are still many folds on the cloth and the cloth still covers the ball.</figcaption>
 					</td>
 					<td style="text-align: center;">
 						<img src="Part3KS50000.png" width="400px" />
-						<figcaption>KS of 50000. With a KS of 50000, the cloth is stiff, it still sits on the ball, but a lot of the folds that were previously there are now gone, there are not as many folds since there is lack slack on the cloth, it doesn't wrap the ball as we can see there is clear space underneath the ball compared to the previous KS where the cloth appears to start wrapping around the bottom of the ball'</figcaption>
+						<figcaption>With a KS of 50000, the cloth is stiffer, a lot of the folds that were previously there are now gone since there is less slack on the cloth, compared to the previous KS where the cloth appears to start wrapping around the bottom of the ball, this cloth does not do that</figcaption>
 					</td>
 				</tr>
 				<tr>
