--- a/hw4/index.html
+++ b/hw4/index.html
@@ -100,7 +100,7 @@
 					</td>
 					<td style="text-align: center;">
 						<img src="Part3KS50000.png" width="400px" />
-						<figcaption>With a KS of 50000, the cloth is stiffer, a lot of the folds that were previously there are now gone since there is less slack on the cloth, compared to the previous KS where the cloth appears to start wrapping around the bottom of the ball, this cloth does not do that</figcaption>
+						<figcaption>With a KS of 50000, a lot of the previous folds are now gone, compared to the previous KS where the cloth appears to start wrapping around the bottom of the ball, this cloth does not do that</figcaption>
 					</td>
 				</tr>
 				<tr>
