--- a/hw4/index.html
+++ b/hw4/index.html
@@ -266,7 +266,9 @@
 			<p>By the time the fabrics are all laid out on the plane, the influences of the fabric parameters still have some nuance. The default fabric lays somewhat comfortably with some ripples. The high density fabric on the other hand has tighter folds, with ripples left over from the random unwavering drop. Finally, the more rigid fabric with tighter spring forces is pulled into a smoother texture with no ripples, whereas lower spring forces left the fabric in a contorted rest position.</p>
 			
 			<h2>Part 5: Shaders</h2>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			<p>In OpenGL, we apply two kinds of shaders: vertex and fragment shaders. The vertex shader takes in a model's vertices and does the job of transforming the inputted positions in model space into world space via matrix transformations (with displacements when desired). The vertex shader also helps out the fragment shader by defining the normals, texture map coordinates, tangents, and screen position. The fragment shader takes outputs from the vertex shader to further apply lighting and material textures to the model. These inputs are then used to compute lighting effects caused by ambient, diffuse, specular, texture, bump, and displacement sources.</p>
+
+			<p>Speaking of Blinn-Phong, BP shading combines </p>
 
 			<h2>(Optional) Part 6: Extra Credit - Additional cloth simulation features!</h2>
 
