--- a/hw4/index.html
+++ b/hw4/index.html
@@ -266,8 +266,26 @@
 			<p>By the time the fabrics are all laid out on the plane, the influences of the fabric parameters still have some nuance. The default fabric lays somewhat comfortably with some ripples. The high density fabric on the other hand has tighter folds, with ripples left over from the random unwavering drop. Finally, the more rigid fabric with tighter spring forces is pulled into a smoother texture with no ripples, whereas lower spring forces left the fabric in a contorted rest position.</p>
 			
 			<h2>Part 5: Shaders</h2>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
+			<div style="display: flex; flex-direction: column; align-items: center;">
+				<table style="width: 100%; text-align: center; border-collapse: collapse;">
+					<tr>
+						<td style="text-align: center;">
+							<img src="Pearto.png" width="400px" />
+							<figcaption>Custom Texture Pearto</figcaption>
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: center;">
+							<img src="mirrorcloth.png" width="400px" />
+							<figcaption>Mirror Shader on Cloth</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="mirrorsphere.png" width="400px" />
+							<figcaption>Mirror Shader on Sphere</figcaption>
+						</td>
+					</tr>
+				</table>
+			</div>
 			<h2>(Optional) Part 6: Extra Credit - Additional cloth simulation features!</h2>
 
 		</div>
