--- a/hw4/index.html
+++ b/hw4/index.html
@@ -294,7 +294,7 @@
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="p5/5.5 pearto.png" width="400px" />
+							<img src="p5/5.5 Pearto.png" width="400px" />
 							<figcaption>Custom texture of Kasane Teto as a pear</figcaption>
 						</td>
 					</tr>
