--- a/hw4/index.html
+++ b/hw4/index.html
@@ -39,7 +39,7 @@
 			Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw4-lebron">https://github.com/cal-cs184-student/sp25-hw4-lebron</a>
 
 			<figure>
-				<img src="clothsim.png" alt="Cloth draped over sphere" style="width:70%" />
+				<img src="triple.png" alt="Cloth draped over sphere" style="width:70%" />
 				<figcaption>&#128514;</figcaption>
 			</figure>
 
@@ -48,8 +48,7 @@
 	-->
 
 			<h2>Overview</h2>
-			Give a high-level overview of what you implemented in this homework. Think about what you've built as a whole. Share your thoughts on what interesting things you've learned from completing the homework.
-
+			
 			<h2>Part 1: Masses and springs</h2>
 
 
