--- a/hw2/index.html
+++ b/hw2/index.html
@@ -32,11 +32,11 @@
 
 			<br>
 
-			Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-pork-chopped-website/hw2/index.html">Webpage</a>
+			Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-pork-chopped-website/hw2/index.html">https://cal-cs184-student.github.io/hw-webpages-pork-chopped-website/hw2/index.html</a>
 
 			<br>
 
-			Link to GitHub repository: <a href="https://github.com/cal-cs184-student/hw-webpages-pork-chopped-website">Repo</a>
+			Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw2-pork-chopped-2">https://github.com/cal-cs184-student/sp25-hw2-pork-chopped-2</a>
 
 			<figure>
 				<img src="teapot.png" alt="Teapot" style="width:50%" />
