--- a/hw3/index.html
+++ b/hw3/index.html
@@ -50,11 +50,11 @@
 
 			<br>
 
-			Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-pork-chopped-website/hw3/index.html">Webpage</a>
+			Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-pork-chopped-website/hw3/index.html">https://cal-cs184-student.github.io/hw-webpages-pork-chopped-website/hw3/index.html</a>
 
 			<br>
 
-			Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw3-pork3">Repo</a>
+			Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw3-pork3">https://github.com/cal-cs184-student/sp25-hw3-pork3</a>
 
 			<figure>
 				<img src="cornell.png" alt="Cornell Boxes with Bunnies" style="width:70%" />
